Sun Jun  2 15:34:41 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/DLL.cpp:

	  Test for null dll_name_ before calling open() in the copy ctor, since
	  open would flag it as an error.  Improved error messages.

	* ace/DLL_Manager.{h,cpp}:
	* ace/Framework_Component.cpp:

	  Changed ACE_DLL_Manager to use ACE_Unmanaged_Singleton so that it can be 
	  explicitely closed by ACE_Framework_Repository after ACE_Service_Config
	  is closed.  Improved error messages.  Thanks to Steve Huston for finding
	  this.

Sun Jun  2 09:03:06 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Select_Reactor_Base.cpp: Delete temp buffers
	  if enqueue_head() fails in the ACE_Select_Reactor_Notify open()
 	  and notify() methods.  Thanks to Chris Uzdavinis
 	  <chris@atdesk.com> for reporting this.

Sat Jun  1 22:42:17 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/AC_CLD.mak:
        * examples/C++NPv2/TPCLS.mak: Added "ssl=1" to properly include
          the SSL stuff in the build; these examples use SSL.

        * examples/C++NPv2/AIO_Client_Logging_Daemon.cpp:
        * examples/C++NPv2/AIO_CLD_export.h:
        * examples/C++NPv2/AIO_CLD.mak: Asynch I/O example from Chapter 8.

Sat Jun  1 15:38:40 2002  Steve Huston  <shuston@riverace.com>

        * ace/Asynch_Acceptor.cpp (open): bind_port is in ACE_Sock_Connect,
          not ACE.
          Added #include "ace/SOCK_Stream.h" that class is also used, and
          #include "ace/Log_Msg.h" to get the ACE_ERROR macros.

        * ace/Asynch_Connector.cpp (handle_connect): clr_flags() is in
          ACE_Flag_Manip, not ACE.
          Added #include "ace/Log_Msg.h" to get ACE_ERROR macros.

Fri May 31 13:35:41 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/TPC_Logging_Server.{h cpp}:
        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp:
          Primarily formatting changes to match the book.

        * examples/C++NPv2/SLDex.mak: Removed Logging_Acceptor_Ex from